--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
     </div>
     <div class="row">
       <div class="small-2 columns">
+        <label for="recipient" class="inline right">Recipient email:</label>
+      </div>
+      <div class="small-10 columns">
+        <input type="text" name="recipient" placeholder="Their email address">
+      </div>
+    </div>
+    <div class="row">
+      <div class="small-2 columns">
         <label for="msg" class="inline right">Message:</label>
       </div>
       <div class="small-10 columns">
